--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <img src="images/logo.png" alt="logo">
                     <p>WE ARE SOCIAL</p>
                     <div class="social-icones">     
-                <a href="https://www.instagram.com/bulki_massage/" target="_blank">
+                <a href="https://www.instagram.com/egy_massage_/" target="_blank">
                 <i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100024338885223" target="_blank">
                 <i class="fab fa-facebook"></i></a>
