--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="links-container">
             <ul class="links ">
             <li><a href="#" data-section=".landing-page"> Home </a></li>
-            <li><a href="#services" data-section=".about-us">Services</a></li>
             <li><a href="#about" data-section=".our-gallary">About</a></li>
+            <li><a href="#services" data-section=".about-us">Services</a></li>
             <li><a href="#portfolio" data-section=".services">Our Gallery</a></li>
             <li><a href="#contact-us" data-section=".contact">Contact-us </a></li>
             </ul>
@@ -73,6 +73,21 @@
     <!-- end slide -->
     </div>
     <!-- End landing page  -->
+        <!-- start about section -->
+    <section class="about-section" id="about">
+	<div class="container pad">
+		<img class="patrick hidden-xs wow fadeInRightSmall" src="images/mano.jpg" alt="">
+		<h2 class="wow fadeInLeftSmall" data-wow-delay="0.1s">Hello</h2>
+		<p class="lead wow fadeInLeftSmall">My name is Mina Nasry</p>
+        <img class="mina" src="images/mano.jpg" alt="">
+		<ul>
+							<i class="fas fa-check-square"></i> <h5>I am a fully qualified and insured massage therapist .</h5><br>
+							<i class="fas fa-check-square"></i><h5>I provide mobile sports massage and personal training in and around Moraira, Calpe, Javea and Benissa, allowing you to keep your body in perfect condition in your own home.</h5><br>
+							<i class="fas fa-check-square"> </i><h5>I work flexible hours to suit my clients work and training times.</h5>
+		</ul>
+	</div>
+</section>
+    <!-- end about section -->
     <!-- Start Service--> 
     <div class="services" id="services">
         <div class="container"> 
@@ -113,21 +128,7 @@
             </div>
     </div>
     <!-- End Service--> 
-    <!-- start about section -->
-    <section class="about-section" id="about">
-	<div class="container pad">
-		<img class="patrick hidden-xs wow fadeInRightSmall" src="images/mano.jpg" alt="">
-		<h2 class="wow fadeInLeftSmall" data-wow-delay="0.1s">Hello</h2>
-		<p class="lead wow fadeInLeftSmall">My name is Mina Nasry</p>
-        <img class="mina" src="images/mano.jpg" alt="">
-		<ul>
-							<i class="fas fa-check-square"></i> <h5>I am a fully qualified and insured massage therapist .</h5>
-							<i class="fas fa-check-square"></i><h5>I provide mobile sports massage and personal training in and around Moraira, Calpe, Javea and Benissa, allowing you to keep your body in perfect condition in your own home.</h5>
-							<i class="fas fa-check-square"> </i><h5>I work flexible hours to suit my clients work and training times.</h5>
-		</ul>
-	</div>
-</section>
-    <!-- end about section -->
+
         <!-- Start Our Gallery--> 
     <div class="portfolio" id="portfolio">
         <div class="container"> 
@@ -241,7 +242,7 @@
                     <img src="images/logo.png" alt="logo">
                     <p>WE ARE SOCIAL</p>
                     <div class="social-icones">     
-                <a href="https://www.instagram.com/egy_massage_/" target="_blank">
+                <a href="https://www.instagram.com/bulki_massage/" target="_blank">
                 <i class="fab fa-instagram"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100024338885223" target="_blank">
                 <i class="fab fa-facebook"></i></a>
